--- a/ConvexHullAlgorithms.vcxproj.filters
+++ b/ConvexHullAlgorithms.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="graphwindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="DeclareDPIAware.manifest" />
@@ -27,6 +30,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="basewin.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="covexhullwindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="graphwindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
