Commit 6 : Able to Move Random Points

--- a/ConvexHullAlgorithms.vcxproj
+++ b/ConvexHullAlgorithms.vcxproj
@@ -145,6 +145,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="algorithmanagemnet.cpp" />
     <ClCompile Include="graphwindow.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
