--- a/ConvexHullAlgorithms.vcxproj.filters
+++ b/ConvexHullAlgorithms.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="graphwindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="algorithmanagemnet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="DeclareDPIAware.manifest" />
