--- a/ConvexHullAlgorithms.vcxproj.filters
+++ b/ConvexHullAlgorithms.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Functions">
+      <UniqueIdentifier>{3afce9e3-6a62-46bc-a006-a18f50c0bb04}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -23,6 +26,21 @@
     </ClCompile>
     <ClCompile Include="algorithmanagemnet.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CalculationHelper.cpp">
+      <Filter>Functions</Filter>
+    </ClCompile>
+    <ClCompile Include="func.cpp">
+      <Filter>Functions</Filter>
+    </ClCompile>
+    <ClCompile Include="PointConvex.cpp">
+      <Filter>Functions</Filter>
+    </ClCompile>
+    <ClCompile Include="QuickHull.cpp">
+      <Filter>Functions</Filter>
+    </ClCompile>
+    <ClCompile Include="Minkowski.cpp">
+      <Filter>Functions</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -40,6 +58,24 @@
     </ClInclude>
     <ClInclude Include="graphwindow.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CalculationHelper.h">
+      <Filter>Functions</Filter>
+    </ClInclude>
+    <ClInclude Include="func.h">
+      <Filter>Functions</Filter>
+    </ClInclude>
+    <ClInclude Include="PointConvex.h">
+      <Filter>Functions</Filter>
+    </ClInclude>
+    <ClInclude Include="QuickHull.h">
+      <Filter>Functions</Filter>
+    </ClInclude>
+    <ClInclude Include="Minkowski.h">
+      <Filter>Functions</Filter>
+    </ClInclude>
+    <ClInclude Include="Preset.h">
+      <Filter>Functions</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
